--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
                           </div>
                     </div>
                 </div>
+                <div class="col-lg-7">
+                    <div class="border border-3 border-primary py-5 px-3 rounded">
+                        <div id="comment-box">
+                            <div id="comment">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe magnam culpa sed ipsam laborum magni quidem soluta? Impedit nesciunt expedita quasi ipsa ducimus, odio ab blanditiis, suscipit, corrupti placeat consequuntur.</p>
+                            </div>
+                            <div id="name" class="d-flex justify-content-between">
+                                <span><a href="#"><i class=" text-danger fa-solid fa-trash-can"></i></a></span>
+                                <h5>Redcliff Red</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
