--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                     <div class="border py-5 px-3 rounded border-warning border-3">
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label fw-bold">Name</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Put your name here">
+                            <input type="email" class="form-control" id="name" placeholder="Put your name here">
                           </div>
                           <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label fw-bold">Your comments</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control" id="comment" rows="3"></textarea>
                           </div>
                           <div class="d-flex justify-content-between">
-                            <button type="button" class="btn btn-warning">Post Comment</button>
+                            <button id="btn" type="button" class="btn btn-warning">Post Comment</button>
                           </div>
                     </div>
                 </div>
