--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <div class="border border-3 py-3 px-3 rounded h-100">
+                    <div id="mainBox" class="border border-3 py-3 px-3 rounded h-100">
                         <div id="comment-box" class="border border-3 border-primary py-3 px-3 rounded">
                             <div id="comment">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe magnam culpa sed ipsam laborum magni quidem soluta? Impedit nesciunt expedita quasi ipsa ducimus, odio ab blanditiis, suscipit, corrupti placeat consequuntur.</p>
