--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe magnam culpa sed ipsam laborum magni quidem soluta? Impedit nesciunt expedita quasi ipsa ducimus, odio ab blanditiis, suscipit, corrupti placeat consequuntur.</p>
                             </div>
                             <div id="name" class="d-flex justify-content-between">
-                                <span><a href="#"><i class=" text-danger fa-solid fa-trash-can"></i></a></span>
+                                <span><a id="delete" href="#"><i class=" text-danger fa-solid fa-trash-can"></i></a></span>
                                 <h5>Redcliff Red</h5>
                             </div>
                         </div>
