--- a/test.html
+++ b/test.html
@@ -11,9 +11,16 @@
     <section>
         <div class="container py-5 my-5">
             <div class="row">
-                <h2>hellow</h2>
+                <div class="col-lg-6">
+                    <div class="">
+                        
+                    </div> 
+                </div>
             </div>
         </div>
     </section>
+    <script>
+        
+    </script>
 </body>
 </html>
