--- a/commentboxTest.html
+++ b/commentboxTest.html
@@ -44,7 +44,7 @@
                             <div id="comment">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe magnam culpa sed ipsam laborum magni quidem soluta? Impedit nesciunt expedita quasi ipsa ducimus, odio ab blanditiis, suscipit, corrupti placeat consequuntur.</p>
                             </div>
-                            <div id="name" class="d-flex justify-content-between">
+                            <div id="name" class="name-div d-flex justify-content-between">
                                 <span class="delete-item" ><a id="delete" href="#"><i class=" text-danger fa-solid fa-trash-can"></i></a></span>
                                 <h5>Redcliff Red</h5>
                             </div>
