--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe magnam culpa sed ipsam laborum magni quidem soluta? Impedit nesciunt expedita quasi ipsa ducimus, odio ab blanditiis, suscipit, corrupti placeat consequuntur.</p>
                             </div>
                             <div id="name" class="d-flex justify-content-between">
-                                <span><a id="delete" href="#"><i class=" text-danger fa-solid fa-trash-can"></i></a></span>
-                                <h5>Redcliff Red</h5>
+                                <!-- <span><a id="delete" href="#"></a></span> -->
+                                <button type="button" class="btn btn-outline-primary"><i class=" text-danger fa-solid fa-trash-can"></i></button>
+                                <h5>Redcliff Rose</h5>
                             </div>
                         </div>
                     </div>
