--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section>
         <div class="container my-5 py-5">
-            <div class="row">
+            <div class="row gy-4">
                 <div class="col-lg-5">
                     <div class="border py-5 px-3 rounded border-warning border-3">
                         <div class="mb-3">
